- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 4.8.1, Qt Creator 8.0.1
 
- 
        
 - 
        5b9f2d5b3 (master)
 
If you have multiple transitions out of a state triggered by the same event but with different conditions the diagram looks confusing since the conditions are not shown in the diagram, but only in the attributes section on the bottom left.
Example

- resulted in
 - 
                    
QTCREATORBUG-31397 14.0.0 scxml editor display signal locations incorrectly
-         
     - Closed
 
 -         
 
- mentioned in
 - 
                    
Page Loading...