SCXMLEditor: Add conditions for transition

- Moved transition event name always above the line
- Added transition condition always below the line

Fixes: QTCREATORBUG-21946
Change-Id: Ib3525bd81c4bf4017998e4a6abfd5bc19b4876d7
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>